--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -30,21 +30,7 @@
 
 <script src="/js/plugins/jquery.cookie/jquery.cookie.js"></script>
 
-<script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <% if(typeof alert != 'undefined') { %>
-        <script>
-            Swal.fire({
-                title: '<%= alertTitle %>',
-                text: '<%= alertMessage %>',
-                icon: '<%= alertIcon %>',
-                showConfirmButton: <%= showConfirmButton %>,
-                timer: <%= timer %>
-            }).then(()=>{
-                window.location='/<%= ruta %>'
-            })
-        </script>
-    <% } %>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
     $(document).ready(function(){
@@ -53,10 +39,38 @@
             headerTag: "h1",
             bodyTag: "fieldset",
             titleTemplate:"<span class='text'></span> #title#",
-            saveState: true
+            saveState: true,
+            onFinished: (a) => {
+                $('#form .steps a:eq(0)').click();
+                $('#form').hide();
+                window.location='/sistema';
+            }
         });
     });
 </script>
+
+<% if(typeof alert != 'undefined') { %>
+    <script>
+        Swal.fire({
+            title: '<%= alertTitle %>',
+            text: '<%= alertMessage %>',
+            icon: '<%= alertIcon %>',
+            showConfirmButton: <%= showConfirmButton %>,
+            timer: <%= timer %>
+        }).then(()=>{
+            window.location='/<%= ruta %>'
+        })
+    </script>
+<% } %>
+
+<script>
+    window.addEventListener("load", function() {
+        document.getElementById("radioContainer").addEventListener("click", function() {
+            document.getElementById("active-select-1").style.display = document.getElementById("fraccionamiento_boolean_recibo").checked ? "inline" : "none";
+        });
+    });
+</script>
+
 
 </body>
 
